# Soroban-ZK-Std

./: .cspell.json  .gitignore  CONTRIBUTING.md  Cargo.toml  GAS.md  Makefile  README.md  Soroban-ZK-Std_issue_vaulr.txt  issues.txt
.github/workflows/: ci.yml  docs-checker.yml  enforce-mdx-standards.yml
contracts/shielded-asset-template/: Cargo.toml
contracts/shielded-asset-template/src/: lib.rs
contracts/verifier-sample/: Cargo.toml
contracts/verifier-sample/src/: lib.rs
crates/soroban-zk-std/: Cargo.toml
crates/soroban-zk-std/benches/: instruction_cost.rs
crates/soroban-zk-std/src/: bin.rs  cache.rs  dummy.rs  dummy_test.rs  groth16.rs  lib.rs  pairing.rs  poseidon2.rs
crates/soroban-zk-std/test_snapshots/cache/tests/: mat_diag_and_modulus_are_cached.1.json  round_constants_lazy_init_then_cache_hit.1.json
crates/soroban-zk-std/test_snapshots/tests/: poseidon2_hash_matches_uncached_and_reuses_cache.1.json
crates/zk-core/: Cargo.toml
crates/zk-core/benches/: g1_ops.rs
crates/zk-core/src/: lib.rs
crates/zk-core/tests/: eip196_vectors.rs
crates/zk-soroban/: Cargo.toml
crates/zk-soroban/src/: bin.rs  lib.rs  pairing.rs
docs/: cap0075-integration-guide.md  constant-time-notes.md  cross-contract-verification.md  developer-faq.md  groth16-verifier-guide.mdx  polynomial-operations.md  zk-cryptography-glossary.md
docs/math/: bulletproofs.mdx  fq12_sparse.mdx  fri.mdx  poseidon2.md  poseidon2.mdx
frontend/: .env.local.example  .remarkrc.mjs  README.md  jest.config.js  mdx-components.tsx  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/__tests__/: lib-mdx.test.ts  mdx-components.test.tsx
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/docs/: page.tsx
frontend/app/docs/api-reference/: page.tsx
frontend/app/docs/architecture/: page.tsx
frontend/app/docs/cap0075/: page.tsx
frontend/app/docs/content/: page.tsx
frontend/app/docs/content/[slug]/: page.tsx
frontend/app/docs/elliptic-curves/: page.tsx
frontend/app/docs/math-rendering/: page.tsx
frontend/app/docs/polynomial-operations/: page.tsx
frontend/app/rss.xml/: route.ts
frontend/app/tools/gas-calculator/: page.tsx
frontend/components/: CodeBlock.tsx  DocSearch.tsx  DocsLayout.tsx  Navbar.tsx  PrevNextNav.tsx  SearchModal.tsx  Sidebar.tsx  TocSidebar.tsx
frontend/components/gas-calculator/: GasCalculator.tsx
frontend/components/markdown/: MarkdownRenderer.tsx
frontend/components/mdx/: Alert.tsx  Callout.tsx  Demo.tsx  index.ts
frontend/components/version-selector/: VersionSelector.tsx
frontend/content/changelog/: 2026-03-26-cicd-foundation.md  2026-03-29-g1-msm.md  2026-03-29-u256-fr-mapping.md  2026-04-27-elgamal-viewing-keys.md  2026-04-27-fermat-inversion.md  2026-04-27-field-serialization.md  2026-04-27-legendre-symbol.md  2026-04-27-poseidon2-sponge.md  2026-04-29-bn254-complete-arithmetic.md  2026-04-29-g1-scalar-mul.md  2026-05-15-bn254-sqrt-docs.md  2026-05-26-patch.md
frontend/content/docs/: getting-started.mdx  mdx-guide.mdx
frontend/content/docs/core-concepts/: developer-faq.mdx  upgrading-from-v1-to-v2.mdx
frontend/content/docs/getting-started/: getting-started-guide.mdx  getting-started.mdx
frontend/content/docs/integration-and-verification/: cap0075-integration-guide.mdx  groth16-verifier-guide.mdx
frontend/content/docs/math-and-cryptography/: non-native-math.mdx  polynomial-operations.mdx
frontend/data/: mockDocs.ts  mockProofConfigs.ts  versions.json
frontend/lib/: api-data.json  changelog.ts  mdx.ts  navigation.ts
frontend/public/: rss.xml
frontend/scripts/: fetch-github-versions.mjs  generate-api-docs.mjs  generate-rss.mjs
frontend/types/: gas.ts
frontend/utils/: gasEstimators.ts
scripts/: check-doc-extensions.sh
spec/: inner_produc.md
specs/: plonk.md  shamir.md
