
[workspace]
resolver = "2"
members = [
    "crates/*",
    "contracts/*",
]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
soroban-sdk = { version = "26.0.1", default-features = false } # Standard for 2026 Protocol 25
ethnum = { version = "1.5.3", default-features = false }
zk-core = { path = "./crates/zk-core" }
soroban-zk-std = { path = "./crates/soroban-zk-std" }

[patch."https://github.com/rust-num/num-traits"]
num-traits = { version = "0.2.19" }


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
