[package]
name = "verifier-sample"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib so tests can link against it

[dependencies]
soroban-sdk = { workspace = true }
soroban-zk-std = { workspace = true }
# soroban-zk-std = { path = "../../crates/soroban-zk-std" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
