[package]
name = "zk-soroban"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
crate-type = ["lib"]

[[bin]]
name = "gen_vectors"
path = "src/bin.rs"

[dependencies]
# Inherited from workspace (no_std enabled)
soroban-sdk = { workspace = true, features = ["hazmat-crypto"]}
ethnum = { workspace = true }
zk-core = { workspace = true }

# Math & Crypto (Strictly no_std)


ark-bn254 = { version = "0.6.0", default-features = false }
ark-ff = { version = "0.6.0", default-features = false }
ark-ec = { version = "0.6.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }

[dev-dependencies]
ark-bn254 = "0.6.0"
ark-ec = "0.6.0"
ark-groth16 = "0.6.0"
ark-relations = "0.6.0"
ark-snark = "0.6.0"
ark-ff = "0.6.0"
ark-std = "0.6.0"
soroban-sdk = { workspace = true, features = ["testutils"] }

[[bench]]
name = "instruction_cost"
